fix learnings spacing

--- a/src/less/case-study.less
+++ b/src/less/case-study.less
@@ -226,8 +226,8 @@
     .highlight {
       width: 80%;
       border-left: 6px solid #1fb1d1;
-      padding-left: 2rem;
-      margin: 1rem 0rem 2rem 2rem;
+      padding-left: 1rem;
+      margin: 1rem 0rem 1rem 2rem;
       p {
         font-family: @font-heading;
         font-size: 1.5rem;
@@ -235,6 +235,7 @@
         font-style: italic;
         color: #71737b;
         line-height: 2.25rem;
+        padding: 1rem 0;
       }
       .yes-no {
         display: flex;
@@ -267,6 +268,12 @@
         }
       }
     }
+
+    .learnings {
+      margin: 0 2rem;
+      padding-bottom: 3rem;
+    }
+
     h3 {
       font-weight: 600;
       font-size: 1.2rem;
